--- a/config/_default/params.yaml
+++ b/config/_default/params.yaml
@@ -5,10 +5,10 @@
 
 # Appearance
 
-theme: minimal
-day_night: true
-font: ''
-font_size: L
+theme: Ocean
+day_night: false 
+font: 'Minimal'
+font_size: XL
 
 # SEO
 
